--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -346,7 +346,7 @@ body{
           <div class="td month b">AVRIL</div>
           <div class="td ref">—</div>
           <<div class="td agent">
-  <button class="agentBtn" data-month="AVRIL">S’inscrire</button>
+  <button class="agentBtn" data-month=">AVRIL">S’inscrire</button>
 </div>
           <div class="td date">—</div>
         </div>
