--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -345,7 +345,7 @@ body{
         <div class="tr">
           <div class="td month b">AVRIL</div>
           <div class="td ref">—</div>
-          <<div class="td agent">
+          <div class="td agent">
   <button class="agentBtn" data-month="AVRIL">S’inscrire</button>
 </div>
           <div class="td date">—</div>
