--- a/index.html
+++ b/index.html
@@ -302,18 +302,102 @@ function jsonp(url, cbName, timeoutMs = 30000){
     document.head.appendChild(script);
   });
 }
+<script>
+/* ====== CONFIG ====== */
+const GOOGLE_CLIENT_ID = "690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com";
+const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec";
+const LS_KEY = "cs_portail_email_v1";
+
+/* ====== DOM ====== */
+const $loginBox = document.getElementById("loginBox");
+const $portal = document.getElementById("portal");
+const $msg = document.getElementById("loginMsg");
+const $logoutPortal = document.getElementById("logoutBtnPortal");
+
+/* ====== UI ====== */
+function showMsg(t){ $msg.textContent = t || ""; }
+
+function markPortalUrl_(){
+  history.replaceState({page:"portal"}, "", location.pathname + "?portal=1");
+}
+function clearPortalUrl_(){
+  history.replaceState({page:"login"}, "", location.pathname);
+}
+
+function showPortal(){
+  $loginBox.style.display = "none";
+  $portal.style.display = "flex";
+  markPortalUrl_();
+}
+function showLogin(){
+  $portal.style.display = "none";
+  $loginBox.style.display = "block";
+  clearPortalUrl_();
+}
+
+/* ====== JWT ====== */
+function b64urlToUtf8(b64url){
+  let s = String(b64url || "").replace(/-/g, "+").replace(/_/g, "/");
+  while (s.length % 4) s += "=";
+  const bin = atob(s);
+  let out = "";
+  for (let i=0;i<bin.length;i++){
+    out += "%" + bin.charCodeAt(i).toString(16).padStart(2,"0");
+  }
+  return decodeURIComponent(out);
+}
+function parseJwtEmail(credential){
+  const parts = String(credential || "").split(".");
+  if (parts.length < 2) return "";
+  const payloadJson = b64urlToUtf8(parts[1]);
+  const payload = JSON.parse(payloadJson);
+  return String(payload.email || "").trim().toLowerCase();
+}
+
+/* ====== JSONP ====== */
+function jsonp(url, cbName, timeoutMs = 30000){
+  return new Promise((resolve, reject) => {
+    const script = document.createElement("script");
+    script.async = true;
+    script.defer = true;
+    script.crossOrigin = "anonymous";
+
+    const cleanup = () => {
+      script.remove();
+      try { delete window[cbName]; } catch(e){ window[cbName] = undefined; }
+    };
+
+    const timer = setTimeout(() => {
+      cleanup();
+      reject(new Error("Timeout JSONP"));
+    }, timeoutMs);
+
+    window[cbName] = (data) => {
+      clearTimeout(timer);
+      cleanup();
+      resolve(data);
+    };
+
+    const sep = url.includes("?") ? "&" : "?";
+    script.src = url + sep + "_t=" + Date.now();
+
+    script.onerror = () => {
+      clearTimeout(timer);
+      cleanup();
+      reject(new Error("Erreur JSONP"));
+    };
+
+    document.head.appendChild(script);
+  });
+}
 
 async function authCheck(email){
   const cb = "cb_auth_" + Math.random().toString(36).slice(2);
   const url = `${API}?view=auth_check&email=${encodeURIComponent(email)}&nocache=1&callback=${cb}`;
-  try {
-    return await jsonp(url, cb, 30000);
-  } catch(e1){
-    return await jsonp(url, cb, 30000);
-  }
+  return await jsonp(url, cb, 30000);
 }
 
-/* ✅ MODIF: une seule fonction de déconnexion */
+/* ====== Logout ====== */
 function doLogout(){
   localStorage.removeItem(LS_KEY);
   showLogin();
@@ -351,7 +435,7 @@ async function handleCredentialResponse(response){
   }
 }
 
-/* ====== Boot ====== */
+/* ====== Boot (VERROUILLÉ) ====== */
 (async function(){
   const g = document.getElementById("g_id_onload");
   g.setAttribute("data-client_id", GOOGLE_CLIENT_ID);
@@ -361,12 +445,12 @@ async function handleCredentialResponse(response){
   const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
 
   if(saved){
-    showPortal();
     showMsg("Vérification…");
     try{
       const res = await authCheck(saved);
       if(res && res.ok === true){
         showMsg("");
+        showPortal();   // ✅ portail affiché seulement si autorisé
       }else{
         localStorage.removeItem(LS_KEY);
         showLogin();
@@ -382,12 +466,30 @@ async function handleCredentialResponse(response){
   }
 })();
 
+/* ====== Bouton logout ====== */
 $logoutPortal.addEventListener("click", doLogout);
 
-window.addEventListener("popstate", () => {
+/* ====== Popstate sécurisé ====== */
+window.addEventListener("popstate", async () => {
   const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
-  if (saved) showPortal();
-  else showLogin();
+  if(!saved){ showLogin(); return; }
+
+  showMsg("Vérification…");
+  try{
+    const res = await authCheck(saved);
+    if(res && res.ok === true){
+      showMsg("");
+      showPortal();
+    }else{
+      localStorage.removeItem(LS_KEY);
+      showLogin();
+      showMsg("Accès refusé.");
+    }
+  }catch(e){
+    localStorage.removeItem(LS_KEY);
+    showLogin();
+    showMsg("Erreur réseau / serveur.");
+  }
 });
 </script>
 
