--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ body {
 <!-- PORTAIL -->
 <main class="wrap" id="portal" style="display:none;">
 
-  <!-- ✅ MODIF: bouton déconnexion en haut à droite -->
+  <!-- ✅ bouton déconnexion en haut à droite -->
   <button id="logoutBtnPortal" class="logoutTopBtn" aria-label="Déconnexion">
     <img src="deconnexion.png" alt="Déconnexion">
   </button>
@@ -202,7 +202,6 @@ body {
     <a class="btn" href="desinfection-vsav.html"><img src="désinfection VSAV.png" alt="Désinfection VSAV"></a>
   </section>
 
-  <!-- ✅ MODIF: SUPPRIMÉ le bouton du bas -->
 </main>
 
 <script>
@@ -220,7 +219,7 @@ const $logoutPortal = document.getElementById("logoutBtnPortal");
 /* ====== UI ====== */
 function showMsg(t){ $msg.textContent = t || ""; }
 
-/* ✅ MODIF: on marque l’état "portail" dans l’URL pour que RETOUR depuis une page revienne au portail (pas au login) */
+/* ✅ on marque l’état "portail" dans l’URL pour que RETOUR depuis une page revienne au portail (pas au login) */
 function markPortalUrl_(){
   if (!location.search.includes("portal=1")) {
     history.replaceState({page:"portal"}, "", location.pathname + "?portal=1");
@@ -229,22 +228,18 @@ function markPortalUrl_(){
   }
 }
 function clearPortalUrl_(){
-  if (location.search.includes("portal=1")) {
-    history.replaceState({page:"login"}, "", location.pathname);
-  } else {
-    history.replaceState({page:"login"}, "", location.pathname);
-  }
+  history.replaceState({page:"login"}, "", location.pathname);
 }
 
 function showPortal(){
   $loginBox.style.display = "none";
   $portal.style.display = "flex";
-  markPortalUrl_(); // ✅ important
+  markPortalUrl_();
 }
 function showLogin(){
   $portal.style.display = "none";
   $loginBox.style.display = "block";
-  clearPortalUrl_(); // ✅ important
+  clearPortalUrl_();
 }
 
 /* ====== JWT email (ROBUSTE) ====== */
@@ -313,7 +308,7 @@ async function authCheck(email){
   }
 }
 
-/* ✅ MODIF: une seule fonction de déconnexion */
+/* ✅ une seule fonction de déconnexion */
 function doLogout(){
   localStorage.removeItem(LS_KEY);
   showLogin();
@@ -361,11 +356,12 @@ async function handleCredentialResponse(response){
   const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
 
   if(saved){
-        showMsg("Vérification…");
+    showMsg("Vérification…");
     try{
       const res = await authCheck(saved);
       if(res && res.ok === true){
         showMsg("");
+        showPortal(); /* ✅ FIX : afficher le portail si autorisé */
       }else{
         localStorage.removeItem(LS_KEY);
         showLogin();
@@ -381,12 +377,29 @@ async function handleCredentialResponse(response){
   }
 })();
 
+/* ✅ bouton déconnexion */
 $logoutPortal.addEventListener("click", doLogout);
 
-window.addEventListener("popstate", () => {
+/* ✅ back/forward : re-check accès */
+window.addEventListener("popstate", async () => {
   const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
-  if (saved) showPortal();
-  else showLogin();
+  if(!saved){
+    showLogin();
+    return;
+  }
+  try{
+    const res = await authCheck(saved);
+    if(res && res.ok === true) showPortal();
+    else{
+      localStorage.removeItem(LS_KEY);
+      showLogin();
+      showMsg("Accès refusé.");
+    }
+  }catch(e){
+    localStorage.removeItem(LS_KEY);
+    showLogin();
+    showMsg("Erreur réseau / serveur.");
+  }
 });
 </script>
 
