--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ body {
 </main>
 
 <script>
+  alert("BOOT");
 /* ====== CONFIG ====== */
 const GOOGLE_CLIENT_ID = "690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com";
 const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec";
