--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body{ background:#000 url("background.png") center top / cover no-repeat fixed; 
 }
 
 /* ===== LOGIN FULL CENTER ===== */
-/* (je laisse ton style tel quel) */
+
 body {
   margin: 0;
   height: 100vh;
@@ -129,7 +129,7 @@ body {
   background: rgba(255,255,255,0.2);
 }
 
-/* ✅ bouton déconnexion top-right (portail) */
+/* ✅ AJOUT: bouton déconnexion top-right (portail) */
 .logoutTopBtn{
   position: fixed;
   top: calc(env(safe-area-inset-top) + 10px);
@@ -180,6 +180,7 @@ body {
 <!-- PORTAIL -->
 <main class="wrap" id="portal" style="display:none;">
 
+  <!-- ✅ MODIF: bouton déconnexion en haut à droite -->
   <button id="logoutBtnPortal" class="logoutTopBtn" aria-label="Déconnexion">
     <img src="deconnexion.png" alt="Déconnexion">
   </button>
@@ -200,10 +201,12 @@ body {
     <a class="btn" href="construction.html"><img src="tickets carburant.png" alt="Tickets carburant"></a>
     <a class="btn" href="desinfection-vsav.html"><img src="désinfection VSAV.png" alt="Désinfection VSAV"></a>
   </section>
+
+  <!-- ✅ MODIF: SUPPRIMÉ le bouton du bas -->
 </main>
 
 <script>
-/* ====== CONFIG ====== */
+/* ====== CONFIG (SEULS 2 TRUCS À METTRE) ====== */
 const GOOGLE_CLIENT_ID = "690765229829-6m73boc7cn4lhkvjel8aa2vo96e83f0t.apps.googleusercontent.com";
 const API = "https://script.google.com/macros/s/AKfycbyOtpcY1OIyDxbbsyaMJHnkeSjzjD54MG1lM7nqAGQzuc_0kmCRNCAFe_2WZUc1xQrL/exec";
 const LS_KEY = "cs_portail_email_v1";
@@ -217,6 +220,7 @@ const $logoutPortal = document.getElementById("logoutBtnPortal");
 /* ====== UI ====== */
 function showMsg(t){ $msg.textContent = t || ""; }
 
+/* ✅ MODIF: on marque l’état "portail" dans l’URL pour que RETOUR depuis une page revienne au portail (pas au login) */
 function markPortalUrl_(){
   if (!location.search.includes("portal=1")) {
     history.replaceState({page:"portal"}, "", location.pathname + "?portal=1");
@@ -225,18 +229,22 @@ function markPortalUrl_(){
   }
 }
 function clearPortalUrl_(){
-  history.replaceState({page:"login"}, "", location.pathname);
+  if (location.search.includes("portal=1")) {
+    history.replaceState({page:"login"}, "", location.pathname);
+  } else {
+    history.replaceState({page:"login"}, "", location.pathname);
+  }
 }
 
 function showPortal(){
   $loginBox.style.display = "none";
   $portal.style.display = "flex";
-  markPortalUrl_();
+  markPortalUrl_(); // ✅ important
 }
 function showLogin(){
   $portal.style.display = "none";
   $loginBox.style.display = "block";
-  clearPortalUrl_();
+  clearPortalUrl_(); // ✅ important
 }
 
 /* ====== JWT email (ROBUSTE) ====== */
@@ -305,7 +313,7 @@ async function authCheck(email){
   }
 }
 
-/* ✅ Déconnexion */
+/* ✅ MODIF: une seule fonction de déconnexion */
 function doLogout(){
   localStorage.removeItem(LS_KEY);
   showLogin();
@@ -315,7 +323,6 @@ function doLogout(){
 /* ====== Google callback ====== */
 async function handleCredentialResponse(response){
   try{
-    showLogin(); // ✅ on force l’écran login pendant la vérif
     showMsg("Vérification de l’accès…");
 
     const email = parseJwtEmail(response.credential);
@@ -331,7 +338,7 @@ async function handleCredentialResponse(response){
     if(res && res.ok === true){
       localStorage.setItem(LS_KEY, email);
       showMsg("");
-      showPortal(); // ✅ portail UNIQUEMENT ici si ok:true
+      showPortal();
     }else{
       localStorage.removeItem(LS_KEY);
       showLogin();
@@ -349,61 +356,37 @@ async function handleCredentialResponse(response){
   const g = document.getElementById("g_id_onload");
   g.setAttribute("data-client_id", GOOGLE_CLIENT_ID);
 
-  // ✅ IMPORTANT: au chargement, on affiche login par défaut,
-  // et le portail ne s’affiche QUE si auth_check ok:true
-  showLogin();
   showMsg("");
 
   const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
-  if(!saved){
-    return; // reste sur login
-  }
 
-  showMsg("Vérification…");
-  try{
-    const res = await authCheck(saved);
-    if(res && res.ok === true){
-      showMsg("");
-      showPortal(); // ✅ portail UNIQUEMENT si ok:true
-    }else{
+  if(saved){
+        showMsg("Vérification…");
+    try{
+      const res = await authCheck(saved);
+      if(res && res.ok === true){
+        showMsg("");
+      }else{
+        localStorage.removeItem(LS_KEY);
+        showLogin();
+        showMsg("Accès refusé.");
+      }
+    }catch(e){
       localStorage.removeItem(LS_KEY);
       showLogin();
-      showMsg("Accès refusé.");
+      showMsg("Erreur réseau / serveur.");
     }
-  }catch(e){
-    localStorage.removeItem(LS_KEY);
+  } else {
     showLogin();
-    showMsg("Erreur réseau / serveur.");
   }
 })();
 
 $logoutPortal.addEventListener("click", doLogout);
 
-/* ====== Retour navigateur ====== */
-window.addEventListener("popstate", async () => {
-  // ✅ même règle: jamais portail si pas autorisé
-  showLogin();
-  showMsg("");
-
+window.addEventListener("popstate", () => {
   const saved = (localStorage.getItem(LS_KEY) || "").trim().toLowerCase();
-  if(!saved) return;
-
-  showMsg("Vérification…");
-  try{
-    const res = await authCheck(saved);
-    if(res && res.ok === true){
-      showMsg("");
-      showPortal();
-    }else{
-      localStorage.removeItem(LS_KEY);
-      showLogin();
-      showMsg("Accès refusé.");
-    }
-  }catch(e){
-    localStorage.removeItem(LS_KEY);
-    showLogin();
-    showMsg("Erreur réseau / serveur.");
-  }
+  if (saved) showPortal();
+  else showLogin();
 });
 </script>
 
