--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -439,7 +439,7 @@ setAppHeight();
 /* ✅ Retour */
 document.getElementById("btnBack").addEventListener("click", ()=>{
   // adapte si tu veux renvoyer ailleurs
-  location.href = "/cs-consenvoye-portal/?portal=1";
+  location.href = "/cs-consenvoye-portail/index.html?portal=1";
 });
 
 /* ✅ Tabs (juste affichage) */
