--- a/desinfection-vsav.html
+++ b/desinfection-vsav.html
@@ -448,7 +448,7 @@ tabInv.addEventListener("click", ()=>setTab("inv"));
 /* =======================
    CONFIG API + IDENTITÉ
    ======================= */
-const API = "TON_URL_EXEC"; // ✅ remplace par ton /exec Apps Script
+const API = "https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec"; // ✅ remplace par ton /exec Apps Script
 const LS_EMAIL = "cs_portail_email_v1";
 const LS_NAME  = "cs_portail_name_v1"; // (optionnel si tu le stockes dans index.html)
 
